--- a/build.gradle
+++ b/build.gradle
@@ -10,9 +10,11 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.testng:testng:7.1.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+    implementation 'org.springframework.boot:spring-boot-starter:2.7.3'
+
 }
 
 test {
